# ChangeLog for dev-lang/php
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-lang/php/ChangeLog,v 1.407 2010/08/11 04:41:18 phajdan.jr Exp $

  11 Aug 2010; Pawel Hajdan jr <phajdan.jr@gentoo.org> php-5.2.14.ebuild:
  x86 stable wrt security bug #332039

  10 Aug 2010; Markos Chandras <hwoarang@gentoo.org> php-5.2.14.ebuild:
  Stable on amd64 wrt bug #332039

  09 Aug 2010; Matti Bickel <mabi@gentoo.org>
  files/eblits/src_configure-v1.eblit, files/eblits/src_configure-v52.eblit:
  configure sapi build dirs in 5.2, too (bug #331751); use proper path for
  libevent, fix sharedext, fpm config file install (bug #331735)

  09 Aug 2010; Matti Bickel <mabi@gentoo.org>
  files/eblits/src_test-v1.eblit:
  run from cli sapi build dir (bug #330023)

  09 Aug 2010; Matti Bickel <mabi@gentoo.org>
  files/eblits/src_install-v1.eblit:
  cd to sapi dirs to make fpm config patches apply again (bug #331735)

*php-5.3.3-r1 (08 Aug 2010)

  08 Aug 2010; Matti Bickel <mabi@gentoo.org>
  files/eblits/src_compile-v1.eblit, -php-5.3.3.ebuild,
  files/eblits/src_configure-v1.eblit, files/eblits/src_install-v1.eblit,
  +php-5.3.3-r1.ebuild:
  fix QA warnings by building each SAPI in its own dir, add patch to fix bug
  #327589 (thanks to Martin von Gagern)

  03 Aug 2010; Matti Bickel <mabi@gentoo.org> php-5.2.14.ebuild:
  added missing mhash in IUSE

*php-5.2.14 (02 Aug 2010)

  02 Aug 2010; Matti Bickel <mabi@gentoo.org>
  +files/eblits/src_configure-v52.eblit, +php-5.2.14.ebuild:
  version bump; this is a security update - see
  http://www.php.net/archive/2010.php#id2010-07-22-1 for details

  29 Jul 2010; Matti Bickel <mabi@gentoo.org>
  files/eblits/src_install-v1.eblit:
  use /tmp for session.save_path (bug #282768)

  29 Jul 2010; Matti Bickel <mabi@gentoo.org>
  files/eblits/src_install-v1.eblit:
  add addpredict to work-around bug #324739

  28 Jul 2010; Markus Meier <maekke@gentoo.org> php-5.3.3.ebuild: