@@ -1,6 +1,6 @@
 # Copyright 1999-2010 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-lang/php/php-5.2.14.ebuild,v 1.4 2010/08/11 04:41:18 phajdan.jr Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-lang/php/php-5.2.14.ebuild,v 1.5 2010/08/11 18:50:45 mabi Exp $
 
 EAPI=2
 
@@ -90,7 +90,7 @@ IUSE="${IUSE} adabas bcmath berkdb birdstep bzip2 calendar cdb cjk
 	readline recode reflection sapdb +session sharedext sharedmem
 	+simplexml snmp soap sockets solid spell spl sqlite ssl suhosin
 	sybase-ct sysvipc tidy +tokenizer truetype unicode wddx
-	xml xmlreader xmlwriter xmlrpc xpm xsl yaz zip zlib"
+	+xml +xmlreader +xmlwriter xmlrpc xpm xsl yaz zip zlib"
 
 DEPEND="app-admin/php-toolkit
 	pcre? ( >=dev-libs/libpcre-7.9[unicode] )
